noinst_LTLIBRARIES += libCongo.la
libCongo_la_SOURCES =
libCongo_la_LIBADD = $(SHARED_LIBS)
libCongo_la_LDFLAGS = $(SHARED_LDFLAGS)
libCongo_la_CFLAGS = $(SHARED_CFLAGS)


include src/Clock/Makefile.am
include src/Commands/Makefile.am
include src/Containers/Makefile.am
include src/Core/Makefile.am
include src/Counters/Makefile.am
include src/File/Makefile.am
include src/Log/Makefile.am
include src/Memory/Makefile.am
include src/Net/Makefile.am
include src/Options/Makefile.am
include src/Random/Makefile.am
include src/Sched/Makefile.am
include src/Storage/Makefile.am
include src/String/Makefile.am
include src/Test/Makefile.am
include src/Threads/Makefile.am
include src/Tunable/Makefile.am
include src/lthread/Makefile.am
