bin_PROGRAMS += congo-stat
congo_stat_CFLAGS = $(SHARED_CFLAGS)
congo_stat_SOURCES = tools/congo-stat.c
congo_stat_LDADD = libCongo.la


bin_PROGRAMS += congo-bench-net
congo_bench_net_CFLAGS = $(SHARED_CFLAGS)
congo_bench_net_SOURCES = tools/congo-bench-net.c
congo_bench_net_LDADD = libCongo.la


bin_PROGRAMS += congo-ping
congo_ping_CFLAGS = $(SHARED_CFLAGS)
congo_ping_SOURCES = tools/congo-ping.c
congo_ping_LDADD = libCongo.la


bin_PROGRAMS += congo-fuzzer
congo_fuzzer_CFLAGS = $(SHARED_CFLAGS)
congo_fuzzer_SOURCES = tools/congo-fuzzer.c
congo_fuzzer_LDADD = libCongo.la


bin_PROGRAMS += congo-proxy
congo_proxy_CFLAGS = $(SHARED_CFLAGS)
congo_proxy_SOURCES = tools/congo-proxy.c
congo_proxy_LDADD = libCongo.la
