libCongo_la_SOURCES += \
	src/Containers/Array.c \
	src/Containers/Array.h \
	src/Containers/HashTable.c \
	src/Containers/HashTable.h \
	src/Containers/Heap.h \
	src/Containers/List.h \
	src/Containers/Queue.h \
	src/Containers/Sort.h \
	src/Containers/Tree.h \
	src/Containers/Value.c \
	src/Containers/Value.h
