libCongo_la_SOURCES += \
	src/Net/Connection.c \
	src/Net/Connection.h \
	src/Net/Resolver.c \
	src/Net/Resolver.h \
	src/Net/SocketManager.c \
	src/Net/SocketManager.h \
	src/Net/Socket.c \
	src/Net/Socket.h \
	src/Net/WireProtocol.c \
	src/Net/WireProtocol.h \
	src/Net/WireProtocolReader.c \
	src/Net/WireProtocolReader.h \
	src/Net/WireProtocolWriter.c \
	src/Net/WireProtocolWriter.h

EXTRA_DIST += \
	src/Net/WireProtocolDelete.def \
	src/Net/WireProtocolDelete.def \
	src/Net/WireProtocolGetmore.def \
	src/Net/WireProtocolHeader.def \
	src/Net/WireProtocolInsert.def \
	src/Net/WireProtocolKillCursors.def \
	src/Net/WireProtocolMsg.def \
	src/Net/WireProtocolQuery.def \
	src/Net/WireProtocolReply.def \
	src/Net/WireProtocolUpdate.def
