libCongo_la_SOURCES += \
	src/Threads/BlockingQueue.c \
	src/Threads/BlockingQueue.h \
	src/Threads/Cond.h \
	src/Threads/Mutex.h \
	src/Threads/RWLock.h \
	src/Threads/Signals.c \
	src/Threads/Signals.h \
	src/Threads/Thread.h \
	src/Threads/ThreadPosix.c \
	src/Threads/ThreadOnce.c \
	src/Threads/ThreadOnce.h \
	src/Threads/ThreadPool.c \
	src/Threads/ThreadPool.h
